Bug 288949. Don't try to use view reparenting to handle scrolled child views. Also, fix regression so that listboxes don't always have widgets. r+sr=dbaron,a=asa.